Bug #6080: Show alert when trying to invite a contact to a group where is already included

--- a/app/src/main/res/layout/activity_chat_contact_properties.xml
+++ b/app/src/main/res/layout/activity_chat_contact_properties.xml
@@ -19,6 +19,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true"
+                app:collapsedTitleTextAppearance="@style/ToolbarTitle"
                 app:contentScrim="?attr/colorPrimary"
                 app:theme="@style/CollapsingToolbarContactInfo"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
