--- a/app/src/main/res/layout/fragment_my_storage.xml
+++ b/app/src/main/res/layout/fragment_my_storage.xml
@@ -5,189 +5,286 @@
 	android:layout_height="match_parent">
 
 	<LinearLayout
+		android:id="@+id/my_storage_parent_linear_layout"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		android:background="@color/white"
+		android:layout_marginLeft="16dp"
+		android:layout_marginRight="16dp"
+		android:layout_marginTop="27dp"
 		android:orientation="vertical">
 
-		<LinearLayout
-			android:id="@+id/my_storage_parent_linear_layout"
+		<TextView
+			android:id="@+id/my_storage_account_title_text"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:textSize="16sp"
+			android:textColor="@color/name_my_account"
+			android:text="Account type"/>
+
+		<RelativeLayout
+			android:id="@+id/my_storage_account_plan_layout"
 			android:layout_width="match_parent"
-			android:layout_height="match_parent"
+			android:layout_height="wrap_content"
+			android:background="@color/white">
+
+			<TextView
+				android:id="@+id/my_storage_account_plan_title_text"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:textSize="14sp"
+				android:layout_alignParentLeft="true"
+				android:textColor="@color/mail_my_account"
+				android:text="PLAN"/>
+
+			<TextView
+				android:id="@+id/my_storage_account_plan_text"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:textSize="14sp"
+				android:layout_alignParentRight="true"
+				android:textColor="@color/name_my_account"
+				android:text="FREE"/>
+		</RelativeLayout>
+
+		<RelativeLayout
+			android:id="@+id/my_storage_account_space_layout"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:background="@color/white">
+
+			<TextView
+				android:id="@+id/my_storage_account_space_title_text"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:textSize="14sp"
+				android:layout_alignParentLeft="true"
+				android:textColor="@color/mail_my_account"
+				android:text="Storage space"/>
+
+			<TextView
+				android:id="@+id/my_storage_account_space_text"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:textSize="14sp"
+				android:layout_alignParentRight="true"
+				android:textColor="@color/name_my_account"
+				android:text="50 GB"/>
+		</RelativeLayout>
+
+		<RelativeLayout
+			android:id="@+id/my_storage_account_expiration_layout"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
 			android:background="@color/white"
-			android:orientation="vertical">
+			android:gravity="left"
+			android:orientation="horizontal" >
 
-			<RelativeLayout
-				android:id="@+id/my_storage_account_type_layout"
-				android:layout_width="match_parent"
+			<TextView
+				android:id="@+id/my_storage_account_expiration_title"
+				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:background="@color/white">
+				android:layout_alignParentLeft="true"
+				android:text="@string/expires_on"
+				android:textSize="16sp"
+				android:textColor="@color/mail_my_account" />
 
-				<LinearLayout
-					android:id="@+id/my_storage_account_type_account_type_layout"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:gravity="left"
-					android:orientation="vertical">
-
-					<TextView
-						android:id="@+id/my_storage_account_type_text"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:textSize="16sp"
-						android:textColor="@color/name_my_account"/>
-
-					<TextView
-						android:id="@+id/my_storage_used_space"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:textSize="14sp"
-						android:textColor="@color/mail_my_account"/>
-
-				</LinearLayout>
-
-			</RelativeLayout>
-
-			<LinearLayout
-				android:id="@+id/my_storage_expiration_layout"
-				android:layout_width="fill_parent"
+			<TextView
+				android:id="@+id/my_storage_account_expiration_text"
+				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:background="@color/white"
-				android:gravity="left"
-				android:orientation="horizontal" >
+				android:layout_alignParentRight="true"
+				android:textSize="14sp"
+				android:textColor="@color/name_my_account"
+				android:text="FEcha"/>
 
-				<LinearLayout
-					android:id="@+id/my_storage_expiration_text_layout"
-					android:layout_width="fill_parent"
-					android:layout_height="wrap_content"
-					android:background="@color/white"
-					android:gravity="left"
-					android:orientation="vertical" >
+		</RelativeLayout>
 
-					<TextView
-						android:id="@+id/my_storage_expiration_label"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:text="@string/expires_on"
-						android:textSize="16sp"
-						android:textColor="@color/name_my_account" />
+		<RelativeLayout
+			android:id="@+id/my_storage_account_transfer_layout"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:background="@color/white"
+			android:gravity="left"
+			android:orientation="horizontal" >
 
-					<TextView
-						android:id="@+id/my_storage_expiration"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:textSize="14sp"
-						android:textColor="@color/mail_my_account" />
-				</LinearLayout>
-			</LinearLayout>
-
-			<LinearLayout
-				android:id="@+id/my_storage_last_session_layout"
-				android:layout_width="fill_parent"
+			<TextView
+				android:id="@+id/my_storage_account_transfer_title"
+				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:background="@color/white"
-				android:gravity="left"
-				android:orientation="vertical" >
+				android:layout_alignParentLeft="true"
+				android:text="@string/expires_on"
+				android:textSize="16sp"
+				android:textColor="@color/mail_my_account" />
 
-				<TextView
-					android:id="@+id/my_storage_last_session_label"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:text="@string/my_account_last_session"
-					android:textSize="16sp"
-					android:textColor="@color/name_my_account"/>
-
-				<TextView
-					android:id="@+id/my_storage_last_session"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:textSize="14sp"
-					android:textColor="@color/mail_my_account"/>
-			</LinearLayout>
-
-			<LinearLayout
-				android:id="@+id/my_storage_connections_layout"
-				android:layout_width="fill_parent"
+			<TextView
+				android:id="@+id/my_storage_account_transfer_text"
+				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:background="@color/white"
-				android:gravity="left"
-				android:orientation="horizontal" >
+				android:layout_alignParentRight="true"
+				android:textSize="14sp"
+				android:textColor="@color/name_my_account"
+				android:text="FEcha"/>
 
-				<LinearLayout
-					android:id="@+id/my_storage_connections_text_layout"
-					android:layout_width="fill_parent"
-					android:layout_height="wrap_content"
-					android:background="@color/white"
-					android:gravity="left"
-					android:orientation="vertical" >
+		</RelativeLayout>
 
-					<TextView
-						android:id="@+id/my_storage_connections_label"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:text="@string/my_account_connections"
-						android:textSize="16sp"
-						android:textColor="@color/name_my_account"/>
+		<TextView
+			android:id="@+id/my_storage_used_space_title_text"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:textSize="16sp"
+			android:layout_marginTop="37dp"
+			android:textColor="@color/name_my_account"
+			android:text="Used Space"/>
 
-					<TextView
-						android:id="@+id/my_storage_connections"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:textSize="14sp"
-						android:textColor="@color/mail_my_account" />
-				</LinearLayout>
+		<TextView
+			android:id="@+id/my_storage_used_space_result_text"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:textSize="14sp"
+			android:layout_marginTop="10dp"
+			android:textColor="@color/name_my_account"
+			android:text="Used Space"/>
 
-				<ImageView
-					android:id="@+id/my_storage_connections_icon"
-					style="@style/dialogActionButton"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:src="@drawable/ic_email_grey"
-					android:visibility="gone" />
-			</LinearLayout>
+		<RelativeLayout
+			android:id="@+id/my_storage_account_cloud_storage_layout"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:background="@color/white"
+			android:gravity="left"
+			android:orientation="horizontal" >
 
-			<LinearLayout
-				android:id="@+id/my_storage_fingerprint_layout"
-				android:layout_width="fill_parent"
+			<TextView
+				android:id="@+id/my_storage_account_cloud_storage_title"
+				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:background="@color/white"
-				android:gravity="left"
-				android:orientation="horizontal" >
+				android:layout_alignParentLeft="true"
+				android:text="@string/section_cloud_drive"
+				android:textSize="14sp"
+				android:textColor="@color/mail_my_account" />
 
-				<LinearLayout
-					android:id="@+id/my_storage_fingerprint_text_layout"
-					android:layout_width="fill_parent"
-					android:layout_height="wrap_content"
-					android:background="@color/white"
-					android:gravity="left"
-					android:orientation="vertical" >
+			<TextView
+				android:id="@+id/my_storage_account_cloud_storage_text"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_alignParentRight="true"
+				android:textSize="15sp"
+				android:textColor="@color/name_my_account"
+				android:text="FEcha"/>
 
-					<TextView
-						android:id="@+id/my_storage_fingerprint_label"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:text="@string/my_account_my_credentials"
-						android:textSize="16sp"
-						android:textColor="@color/name_my_account"/>
+		</RelativeLayout>
 
-					<TextView
-						android:id="@+id/my_storage_fingerprint"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:textSize="14sp"
-						android:textColor="@color/mail_my_account" />
-				</LinearLayout>
+		<RelativeLayout
+			android:id="@+id/my_storage_account_inbox_storage_layout"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:background="@color/white"
+			android:gravity="left"
+			android:orientation="horizontal" >
 
-				<ImageView
-					android:id="@+id/my_storage_fingerprint_icon"
-					style="@style/dialogActionButton"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:src="@drawable/ic_email_grey"
-					android:visibility="invisible" />
-			</LinearLayout>
+			<TextView
+				android:id="@+id/my_storage_account_inbox_storage_title"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_alignParentLeft="true"
+				android:text="@string/section_inbox"
+				android:textSize="14sp"
+				android:textColor="@color/mail_my_account" />
 
-		</LinearLayout>
+			<TextView
+				android:id="@+id/my_storage_account_inbox_storage_text"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_alignParentRight="true"
+				android:textSize="15sp"
+				android:textColor="@color/name_my_account"
+				android:text="FEcha"/>
+
+		</RelativeLayout>
+
+		<RelativeLayout
+			android:id="@+id/my_storage_account_incoming_storage_layout"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:background="@color/white"
+			android:gravity="left"
+			android:orientation="horizontal" >
+
+			<TextView
+				android:id="@+id/my_storage_account_incoming_storage_title"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_alignParentLeft="true"
+				android:text="@string/section_shared_items"
+				android:textSize="14sp"
+				android:textColor="@color/mail_my_account" />
+
+			<TextView
+				android:id="@+id/my_storage_account_incoming_storage_text"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_alignParentRight="true"
+				android:textSize="15sp"
+				android:textColor="@color/name_my_account"
+				android:text="FEcha"/>
+
+		</RelativeLayout>
+
+		<RelativeLayout
+			android:id="@+id/my_storage_account_rubbish_storage_layout"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:background="@color/white"
+			android:gravity="left"
+			android:orientation="horizontal" >
+
+			<TextView
+				android:id="@+id/my_storage_account_rubbish_storage_title"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_alignParentLeft="true"
+				android:text="@string/section_rubbish_bin"
+				android:textSize="14sp"
+				android:textColor="@color/mail_my_account" />
+
+			<TextView
+				android:id="@+id/my_storage_account_rubbish_storage_text"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_alignParentRight="true"
+				android:textSize="15sp"
+				android:textColor="@color/name_my_account"
+				android:text="FEcha"/>
+
+		</RelativeLayout>
+
+		<RelativeLayout
+			android:id="@+id/my_storage_account_available_storage_layout"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:background="@color/white"
+			android:gravity="left"
+			android:orientation="horizontal" >
+
+			<TextView
+				android:id="@+id/my_storage_account_available_storage_title"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_alignParentLeft="true"
+				android:text="@string/section_rubbish_bin"
+				android:textSize="14sp"
+				android:textColor="@color/mail_my_account" />
+
+			<TextView
+				android:id="@+id/my_storage_account_available_storage_text"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_alignParentRight="true"
+				android:textSize="15sp"
+				android:textColor="@color/name_my_account"
+				android:text="FEcha"/>
+
+		</RelativeLayout>
 
 	</LinearLayout>
 
