--- a/app/src/main/res/layout/fragment_my_storage.xml
+++ b/app/src/main/res/layout/fragment_my_storage.xml
@@ -20,7 +20,7 @@
 			android:layout_height="wrap_content"
 			android:textSize="16sp"
 			android:textColor="@color/name_my_account"
-			android:text="Account type"/>
+			android:text="@string/my_account_title"/>
 
 		<RelativeLayout
 			android:id="@+id/my_storage_account_plan_layout"
@@ -35,7 +35,7 @@
 				android:textSize="14sp"
 				android:layout_alignParentLeft="true"
 				android:textColor="@color/mail_my_account"
-				android:text="PLAN"/>
+				android:text="@string/account_plan"/>
 
 			<TextView
 				android:id="@+id/my_storage_account_plan_text"
@@ -60,7 +60,7 @@
 				android:textSize="14sp"
 				android:layout_alignParentLeft="true"
 				android:textColor="@color/mail_my_account"
-				android:text="Storage space"/>
+				android:text="@string/storage_space"/>
 
 			<TextView
 				android:id="@+id/my_storage_account_space_text"
@@ -86,7 +86,7 @@
 				android:layout_height="wrap_content"
 				android:layout_alignParentLeft="true"
 				android:text="@string/expires_on"
-				android:textSize="16sp"
+				android:textSize="14sp"
 				android:textColor="@color/mail_my_account" />
 
 			<TextView
@@ -95,8 +95,7 @@
 				android:layout_height="wrap_content"
 				android:layout_alignParentRight="true"
 				android:textSize="14sp"
-				android:textColor="@color/name_my_account"
-				android:text="FEcha"/>
+				android:textColor="@color/name_my_account"/>
 
 		</RelativeLayout>
 
@@ -113,8 +112,8 @@
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:layout_alignParentLeft="true"
-				android:text="@string/expires_on"
-				android:textSize="16sp"
+				android:text="@string/transfer_quota"
+				android:textSize="14sp"
 				android:textColor="@color/mail_my_account" />
 
 			<TextView
@@ -135,7 +134,7 @@
 			android:textSize="16sp"
 			android:layout_marginTop="37dp"
 			android:textColor="@color/name_my_account"
-			android:text="Used Space"/>
+			android:text="@string/my_account_used_space"/>
 
 		<TextView
 			android:id="@+id/my_storage_used_space_result_text"
@@ -143,8 +142,8 @@
 			android:layout_height="wrap_content"
 			android:textSize="14sp"
 			android:layout_marginTop="10dp"
-			android:textColor="@color/name_my_account"
-			android:text="Used Space"/>
+			android:layout_marginBottom="22dp"
+			android:textColor="@color/name_my_account"/>
 
 		<RelativeLayout
 			android:id="@+id/my_storage_account_cloud_storage_layout"
@@ -152,6 +151,7 @@
 			android:layout_height="wrap_content"
 			android:background="@color/white"
 			android:gravity="left"
+			android:layout_marginBottom="12dp"
 			android:orientation="horizontal" >
 
 			<TextView
@@ -169,8 +169,7 @@
 				android:layout_height="wrap_content"
 				android:layout_alignParentRight="true"
 				android:textSize="15sp"
-				android:textColor="@color/name_my_account"
-				android:text="FEcha"/>
+				android:textColor="@color/name_my_account"/>
 
 		</RelativeLayout>
 
@@ -180,6 +179,7 @@
 			android:layout_height="wrap_content"
 			android:background="@color/white"
 			android:gravity="left"
+			android:layout_marginBottom="12dp"
 			android:orientation="horizontal" >
 
 			<TextView
@@ -197,8 +197,7 @@
 				android:layout_height="wrap_content"
 				android:layout_alignParentRight="true"
 				android:textSize="15sp"
-				android:textColor="@color/name_my_account"
-				android:text="FEcha"/>
+				android:textColor="@color/name_my_account"/>
 
 		</RelativeLayout>
 
@@ -208,6 +207,7 @@
 			android:layout_height="wrap_content"
 			android:background="@color/white"
 			android:gravity="left"
+			android:layout_marginBottom="12dp"
 			android:orientation="horizontal" >
 
 			<TextView
@@ -215,7 +215,7 @@
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:layout_alignParentLeft="true"
-				android:text="@string/section_shared_items"
+				android:text="@string/title_incoming_shares_explorer"
 				android:textSize="14sp"
 				android:textColor="@color/mail_my_account" />
 
@@ -225,8 +225,7 @@
 				android:layout_height="wrap_content"
 				android:layout_alignParentRight="true"
 				android:textSize="15sp"
-				android:textColor="@color/name_my_account"
-				android:text="FEcha"/>
+				android:textColor="@color/name_my_account"/>
 
 		</RelativeLayout>
 
@@ -236,6 +235,7 @@
 			android:layout_height="wrap_content"
 			android:background="@color/white"
 			android:gravity="left"
+			android:layout_marginBottom="12dp"
 			android:orientation="horizontal" >
 
 			<TextView
@@ -253,8 +253,7 @@
 				android:layout_height="wrap_content"
 				android:layout_alignParentRight="true"
 				android:textSize="15sp"
-				android:textColor="@color/name_my_account"
-				android:text="FEcha"/>
+				android:textColor="@color/name_my_account"/>
 
 		</RelativeLayout>
 
@@ -264,6 +263,7 @@
 			android:layout_height="wrap_content"
 			android:background="@color/white"
 			android:gravity="left"
+			android:layout_marginBottom="12dp"
 			android:orientation="horizontal" >
 
 			<TextView
@@ -271,7 +271,7 @@
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:layout_alignParentLeft="true"
-				android:text="@string/section_rubbish_bin"
+				android:text="@string/available_space"
 				android:textSize="14sp"
 				android:textColor="@color/mail_my_account" />
 
@@ -281,9 +281,26 @@
 				android:layout_height="wrap_content"
 				android:layout_alignParentRight="true"
 				android:textSize="15sp"
-				android:textColor="@color/name_my_account"
-				android:text="FEcha"/>
+				android:textColor="@color/name_my_account"/>
 
+		</RelativeLayout>
+
+		<RelativeLayout
+			android:id="@+id/my_storage_account_progress_bar_layout"
+			android:layout_width="match_parent"
+			android:layout_height="10dp"
+			android:background="@color/white"
+			android:gravity="left"
+			android:orientation="horizontal" >
+
+			<ProgressBar
+				android:id="@+id/my_storage_progress_bar"
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:minHeight="8dp"
+				style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+				android:indeterminate="false"
+				android:max="100"/>
 		</RelativeLayout>
 
 	</LinearLayout>
