--- a/app/src/main/res/layout/activity_manager.xml
+++ b/app/src/main/res/layout/activity_manager.xml
@@ -119,6 +119,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/mega"
+                    android:elevation="6dp"
                     style="@style/MyCustomTabLayout"/>
 
                 <android.support.v4.view.ViewPager
