Bug #6155 - Crash when uploading to MEGA (from another app) when the chat is enabled

--- a/app/src/main/res/layout/activity_file_explorer.xml
+++ b/app/src/main/res/layout/activity_file_explorer.xml
@@ -105,6 +105,14 @@
             android:layout_marginTop="5dp"
             android:text="@string/login_preparing_filelist" />
 
+        <TextView
+            android:id="@+id/file_login_initializing_chat_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="@string/login_initializing_chat"
+            android:visibility="gone"/>
+
         <ProgressBar
             android:id="@+id/file_login_fetching_nodes_bar"
             style="@style/MEGAProgressBarLogin"
