QA report #6217: My account with no negative space at the screen's bottom

--- a/app/src/main/res/layout/fragment_my_storage.xml
+++ b/app/src/main/res/layout/fragment_my_storage.xml
@@ -295,6 +295,7 @@
 			android:layout_height="8dp"
 			android:background="@color/white"
 			android:gravity="left"
+			android:layout_marginBottom="32dp"
 			android:orientation="horizontal" >
 
 			<ProgressBar
