--- a/app/src/main/res/layout/bottom_sheet_node_item.xml
+++ b/app/src/main/res/layout/bottom_sheet_node_item.xml
@@ -7,18 +7,18 @@
     android:background="@color/white"
     android:orientation="vertical">
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/node_title_layout"
         android:layout_width="match_parent"
         android:layout_height="72dp"
         android:layout_marginTop="8dp"
-        android:orientation="horizontal" >
+        android:layout_gravity="center_vertical">
 
         <RelativeLayout
             android:id="@+id/node_relative_layout_thumb"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:layout_gravity="center_vertical"
+            android:layout_centerVertical="true"
             android:layout_marginLeft="12dp">
 
             <ImageView
@@ -27,27 +27,20 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:scaleType="fitCenter" />
-
-            <TextView
-                android:id="@+id/node_initial_letter"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:gravity="center_horizontal|center_vertical"
-                android:paddingBottom="3dp" />
         </RelativeLayout>
 
         <RelativeLayout
-            android:layout_width="match_parent"
+            android:id="@+id/node_relative_layout_info"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="12dp">
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="12dp"
+            android:layout_toRightOf="@id/node_relative_layout_thumb">
 
             <TextView
                 android:id="@+id/node_name_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center_vertical"
                 android:singleLine="true"
                 android:maxLines="1"
                 android:ellipsize="end"
@@ -59,7 +52,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/mail_my_account"
-                android:gravity="center_vertical"
                 android:layout_below="@+id/node_name_text"
                 android:textSize="14sp"
                 android:singleLine="true"
@@ -68,8 +60,28 @@
 
         </RelativeLayout>
 
+        <RelativeLayout
+            android:id="@+id/node_relative_layout_public_link"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="45dp"
+            android:gravity="right"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@id/node_relative_layout_info">
 
-    </LinearLayout>
+            <ImageView
+                android:id="@+id/node_public_link"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/link_ic"
+                android:background="@null"
+                android:tint="@color/transparency_white"/>
+
+        </RelativeLayout>
+
+
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
