--- a/app/src/main/res/layout/activity_folder_link.xml
+++ b/app/src/main/res/layout/activity_folder_link.xml
@@ -46,41 +46,35 @@
         android:layout_marginTop="@dimen/standard_margin"
         android:textColor="@color/text_secondary"
         android:textSize="16sp" />
-   
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/folder_link_list_view_browser"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@id/separator_3"
-        android:layout_below="@id/content_text"
-        android:choiceMode="multipleChoice" />   
         
-   <LinearLayout
+    <LinearLayout
         android:id="@+id/options_folder_link_layout"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_alignParentBottom="true"
-        android:gravity="right"
-        android:background="@color/white"
+        android:background="@color/preference_category_title"
+        android:gravity="right|center_vertical"
         android:orientation="horizontal" >
-        
-       <TextView
-            android:id="@+id/folder_link_import_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-medium"
-            android:gravity="center_vertical|center_horizontal"
-            android:textColor="@color/accentColor"
-            android:textSize="14sp" />
 
-        <TextView
+       <Button
+           android:id="@+id/folder_link_import_button"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:textColor="@color/accentColor"
+           android:gravity="center_vertical|center_horizontal"
+           android:stateListAnimator="@null"
+           android:background="@color/preference_category_title"
+           android:text="@string/general_import"/>
+
+        <Button
             android:id="@+id/folder_link_button_download"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-medium"
-            android:gravity="center_vertical|center_horizontal"
             android:textColor="@color/accentColor"
-            android:textSize="14sp" />
+            android:gravity="center_vertical|center_horizontal"
+            android:stateListAnimator="@null"
+            android:background="@color/preference_category_title"
+            android:text="@string/general_download"/>
     </LinearLayout>
 
     <View
@@ -88,5 +82,13 @@
         android:layout_width="fill_parent"
         android:layout_height="1dip"
         android:layout_above="@id/options_folder_link_layout"
-        android:background="@color/separator_grey" />
+        android:background="@color/tour_bar_grey" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/folder_link_list_view_browser"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/separator_3"
+        android:layout_below="@id/content_text"
+        android:choiceMode="multipleChoice" />
 </RelativeLayout>
