--- a/app/src/main/res/layout/bottom_sheet_contact_item.xml
+++ b/app/src/main/res/layout/bottom_sheet_contact_item.xml
@@ -113,6 +113,37 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/contact_list_option_start_conversation_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:orientation="horizontal" >
+
+        <ImageView
+            android:id="@+id/contact_list_option_start_conversation"
+            style="@style/dialogActionButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:alpha="0.54"
+            android:layout_marginLeft="5dp"
+            android:paddingBottom="2dp"
+            android:paddingTop="2dp"
+            android:src="@drawable/ic_menu_chat"
+            android:visibility="visible" />
+
+        <TextView
+            android:id="@+id/contacts_list_option_start_conversation_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="2dp"
+            android:paddingTop="2dp"
+            android:layout_marginLeft="18dp"
+            android:text="@string/group_chat_start_conversation_label"
+            android:textColor="@color/name_my_account"
+            android:textSize="16sp"/>
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/contact_list_option_send_file_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
