--- a/app/src/main/res/layout/activity_file_provider.xml
+++ b/app/src/main/res/layout/activity_file_provider.xml
@@ -56,6 +56,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/mega"
+                android:elevation="4dp"
                 style="@style/MyCustomTabLayout"/>
 
             <android.support.v4.view.ViewPager
